corrigindo o nome account na api-docs
